force-app/main/default/objects/custom_create362__c/custom_create362__c.object-meta.xml
<CustomObject>
    <label>Custom created object362</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects362</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>