force-app/main/default/objects/custom_create362__c/fields/custom_create_362field737__c.field-meta.xml
<CustomField>
    <fullName>custom_create_362field737__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 362field737</label>
    <type>Checkbox</type>
</CustomField>